test/fail/big_ret04.v3
//@execute 0=1000; 1=1001; 2=1002; 3=1003; 4=1004; 5=1005; 6=1006; 7=1007; 8=1008; 9=1009; 10=1010; 11=1011; 12=1012; 13=1013; 14=1014; 15=1015; 16=1016; 17=!BoundsCheckException
def main(a: int) -> int {
	var x = foo(a);
	var y = [
		x.0, x.1, x.2, x.3,
		x.4, x.5, x.6, x.7,
		x.8, x.9, x.10, x.11,
		x.12, x.13, x.14, x.15, x.16];
	return y[a] - 1;
}
def foo(a: int) ->
		(int, int, int, int,
		 int, int, int, int,
		 int, int, int, int,
		 int, int, int, int, int) {
	return (1001, 1002, 1003, 1004,
		1005, 1006, 1007, 1008,
		1009, 1010, 1011, 1012,
		1013, 1014, 1015, 1016, 1017);
}
